Edits to try and fix parts not looking right on mobile

--- a/src/styles/components/about.scss
+++ b/src/styles/components/about.scss
@@ -40,7 +40,7 @@
   2px 2px 25px rgba(black, .5);
 }
 
-.about-text {
+#about-text {
   text-align: left;
   color: black;
 }
@@ -67,7 +67,7 @@
   .about-p {
     font-size: 14px;
   }
-  .about-text {
+  #about-text {
     width: 300px;
     height: 435px;
   }
