--- a/src/styles/components/projects.scss
+++ b/src/styles/components/projects.scss
@@ -69,21 +69,21 @@
     height: 415px;
 
     h3 {
-      font-size: 1em;
-      margin: 1.1em;
+      font-size: 20px;
+      margin: 22px;
     }
     .project-image {
       width: 289px;
       height: 177px;
     }
     .links {
-      margin: 1.1em;
+      margin: 21px;
     }
     a {
-      font-size: 0.8em;
+      font-size: 15px;
     }
     .project-description {
-      font-size: 0.75em;
+      font-size: 14px;
     }
   }
 }
